# kde-baseapps

./: CMakeLists.txt
doc/konqueror/: index.docbook
dolphin/src/: CMakeLists.txt  dolphincontextmenu.cpp  dolphinmainwindow.cpp  dolphinmainwindow.h  dolphinviewcontainer.cpp  dolphinviewcontainer.h
dolphin/src/kitemviews/: kfileitemmodel.cpp  kfileitemmodelrolesupdater.cpp  kfileitemmodelrolesupdater.h  kitemlistcontroller.cpp  kitemliststyleoption.h  kitemlistview.cpp  kitemlistwidget.cpp  kstandarditemlistwidget.cpp
dolphin/src/kitemviews/private/: kitemlistviewlayouter.cpp
dolphin/src/panels/information/: filemetadataconfigurationdialog.cpp
dolphin/src/panels/places/: placesitemmodel.cpp  placesitemmodel.h
dolphin/src/search/: dolphinfacetswidget.cpp  dolphinfacetswidget.h  dolphinsearchbox.cpp  dolphinsearchbox.h
dolphin/src/settings/: additionalinfodialog.cpp
dolphin/src/settings/services/: servicessettingspage.cpp
dolphin/src/statusbar/: dolphinstatusbar.cpp
dolphin/src/tests/: CMakeLists.txt  kfileitemmodelbenchmark.cpp  kfileitemmodeltest.cpp  kitemlistselectionmanagertest.cpp  kitemrangetest.cpp  kitemsettest.cpp  testdir.cpp
dolphin/src/views/: dolphinview.cpp  dolphinviewactionhandler.cpp
dolphin/src/views/tooltips/: tooltipmanager.cpp
kcharselect/: CMakeLists.txt  kcharselectdia.cc
kcolorchooser/: CMakeLists.txt
kdepasswd/: kdepasswd.cpp  passwd.cpp  passwddlg.cpp
kdf/: CMakeLists.txt  kdfwidget.cpp  kwikdisk.cpp
kdialog/: CMakeLists.txt
keditbookmarks/: CMakeLists.txt  kebsearchline.cpp  toplevel.cpp
keditbookmarks/kbookmarkmodel/: model.cpp
keditbookmarks/kbookmarkmodel/tests/: CMakeLists.txt
kfind/: kftabdlg.cpp
konq-plugins/: CMakeLists.txt
konq-plugins/adblock/: adblock.h
konq-plugins/akregator/: konqfeedicon.cpp
konq-plugins/domtreeviewer/: domtreewindow.cpp
konq-plugins/fsview/: fsview.cpp  treemap.cpp
konq-plugins/kimgalleryplugin/: imgalleryplugin.cpp
konq-plugins/rellinks/: CMakeLists.txt  plugin_rellinks.cpp
konq-plugins/searchbar/: CMakeLists.txt
konq-plugins/webarchiver/: archivedialog.cpp
konqueror/: CMakeLists.txt
konqueror/about/: CMakeLists.txt
konqueror/client/: kfmclient.cpp
konqueror/desktop/: CMakeLists.txt  open_as_root.desktop
konqueror/dolphinpart/kitemviews/: kfileitemmodel.cpp  kfileitemmodelrolesupdater.cpp  kitemlistcontainer.cpp  kitemlistcontroller.cpp  kitemlistgroupheader.cpp  kitemlistselectionmanager.cpp  kitemlistview.cpp  kitemset.cpp  kitemset.h  kstandarditemlistgroupheader.cpp
konqueror/dolphinpart/kitemviews/private/: kdirectorycontentscounterworker.cpp  kitemlistheaderwidget.cpp  kitemlistselectiontoggle.cpp  kitemlistsmoothscroller.cpp  kpixmapmodifier.cpp
konqueror/dolphinpart/settings/: serviceitemdelegate.cpp
konqueror/dolphinpart/settings/services/: servicessettingspage.cpp
konqueror/dolphinpart/tests/: kfileitemlistviewtest.cpp  kitemlistcontrollertest.cpp
konqueror/dolphinpart/views/: dolphinitemlistview.cpp  dolphinview.cpp  dolphinviewactionhandler.cpp  viewproperties.cpp
konqueror/libkonq/: CMakeLists.txt  konq_historyprovider.cpp  konq_menuactions.h  konqmimedata.cpp
konqueror/libkonq/tests/: CMakeLists.txt
konqueror/plugins/: CMakeLists.txt
konqueror/plugins/adblock/: adblock.cpp
konqueror/plugins/akregator/: CMakeLists.txt  akregatorplugin.cpp
konqueror/plugins/babelfish/: plugin_babelfish.cpp
konqueror/plugins/bazaar/: CMakeLists.txt
konqueror/plugins/dropbox/: CMakeLists.txt
konqueror/plugins/fsview/: fsview.cpp  treemap.cpp
konqueror/plugins/git/: CMakeLists.txt
konqueror/plugins/hg/: CMakeLists.txt  commitdialog.h  commitinfowidget.h
konqueror/plugins/shellcmdplugin/: kshellcmdexecutor.cpp
konqueror/plugins/svn/: CMakeLists.txt
konqueror/plugins/validators/: plugin_validators.cpp
konqueror/settings/kio/: ksaveioconfig.cpp
konqueror/settings/konqhtml/: pluginopts.cpp
konqueror/sidebar/: CMakeLists.txt  module_manager.cpp  module_manager.h  sidebar_widget.cpp  sidebar_widget.h
konqueror/sidebar/default_entries/: home.desktop  root.desktop
konqueror/sidebar/test/: CMakeLists.txt
konqueror/sidebar/trees/: CMakeLists.txt  konq_sidebartree.cpp  konq_sidebartree.h  konq_sidebartreeitem.h  konq_sidebartreetoplevelitem.cpp
konqueror/sidebar/trees/bookmark_module/: bookmark_module.cpp
konqueror/sidebar/trees/dirtree_module/: CMakeLists.txt  dirtree_item.cpp  dirtree_item.h  dirtree_module.cpp  dirtree_module.h
konqueror/sidebar/trees/legacy/: k3listview.cpp  k3listview.h  k3listviewsearchline.cpp  k3listviewsearchline.h  k3urldrag.cpp  k3urldrag.h  q3dragobject.cpp  q3dragobject.h  q3frame.cpp  q3frame.h  q3header.cpp  q3header.h  q3listview.cpp  q3listview.h  q3scrollview.cpp  q3scrollview.h  q3tl.h  qobject_p.h
konqueror/sidebar/web_module/: CMakeLists.txt  web_module.cpp
konqueror/src/: CMakeLists.txt  KonqViewAdaptor.cpp  KonqViewAdaptor.h  konqactions.cpp  konqclosedwindowsmanager.cpp  konqcombo.cpp  konqextensionmanager.cpp  konqframestatusbar.cpp  konqhistorymodel.cpp  konqmain.cpp  konqmainwindow.cpp  konqmainwindow.h  konqmisc.cpp  konqmouseeventfilter.cpp  konqmouseeventfilter.h  konqsessionmanager.cpp  konqueror.kcfg  konqueror.rc  konqundomanager.cpp  konqview.cpp  konqview.h  konqviewmanager.cpp  konqviewmanager.h
konqueror/src/tests/: CMakeLists.txt  konqviewmgrtest.cpp
ksnapshot/: CMakeLists.txt
lib/konq/: CMakeLists.txt  konq_historyentry.h  konq_historyloader.cpp  konq_menuactions.cpp  konq_nameandurlinputdialog.h  konq_operations.cpp  konq_popupmenu.cpp  konq_popupmenuinformation.cpp  konq_popupmenuinformation.h  konq_statusbarmessagelabel.cpp
plasma/applets/folderview/: abstractitemview.cpp  dialog.cpp  iconview.cpp  iconview.h  itemeditor.cpp  itemeditor.h  listview.cpp  listview.h  popupview.cpp  previewpluginsmodel.cpp
